--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.1.4",
     "node-telegram-bot-api": "^0.56.0"
   },
